; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libzvbi-teletextdec.c_create_ass_text.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libzvbi-teletextdec.c_create_ass_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@AV_BPRINT_SIZE_UNLIMITED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_8__*, i8*)* @create_ass_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @create_ass_text(%struct.TYPE_8__* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_9__, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32, i32* @AV_BPRINT_SIZE_UNLIMITED, align 4
  %9 = call i32 @av_bprint_init(%struct.TYPE_9__* %7, i32 0, i32 %8)
  %10 = load i8*, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = call i32 @ff_ass_bprint_text_event(%struct.TYPE_9__* %7, i8* %10, i32 %12, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0)
  %14 = call i32 @av_bprint_is_complete(%struct.TYPE_9__* %7)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %2
  %17 = call i32 @av_bprint_finalize(%struct.TYPE_9__* %7, i32* null)
  store i8* null, i8** %3, align 8
  br label %28

18:                                               ; preds = %2
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %20, align 4
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i8* @ff_ass_get_dialog(i32 %21, i32 0, i32* null, i32* null, i32 %24)
  store i8* %25, i8** %6, align 8
  %26 = call i32 @av_bprint_finalize(%struct.TYPE_9__* %7, i32* null)
  %27 = load i8*, i8** %6, align 8
  store i8* %27, i8** %3, align 8
  br label %28

28:                                               ; preds = %18, %16
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}

declare dso_local i32 @av_bprint_init(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @ff_ass_bprint_text_event(%struct.TYPE_9__*, i8*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @av_bprint_is_complete(%struct.TYPE_9__*) #1

declare dso_local i32 @av_bprint_finalize(%struct.TYPE_9__*, i32*) #1

declare dso_local i8* @ff_ass_get_dialog(i32, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
